--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,12 @@
-footer {
-    color: yellow;
+/* style.css (Optional) */
+body {
+  margin: 0;
+  overflow: hidden;
+  font-family: Arial, sans-serif;
+  background-color: #f0f0f0;
 }
 
-.canvas{
-    width: 100%;
-    height: 500px;
-    border: 4px groove gray;
-    background-color: powderblue;
-    position: relative;
-    padding: 0%;
-    cursor: pointer;
-    overflow: hidden;
-}
-
-.ballon{
-    position: absolute;
-    width: 60px;
-    height: 100px;
-    margin: 0%;
-    border: 1px solid black;
-    border-radius: 50%;
-}
-
-.ballon-red{
-    background-color: red;
-}
-.ballon-yellow{
-    background-color: yellow;
-}
-.ballon-green{
-    background-color: green;
-}
-
-.dhaga{
-    height: 125px;
-    width: 1px;
-    margin: 0px;
-    border-left: 1px solid black;
-    position: inherit;
-    top: 98px;
-    left: 30px;
+canvas {
+  display: block;
+  background-color: #87CEEB; /* Sky color */
 }
